--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             Doloribus nisi neque praesentium assumenda minima, recusandae
             magni! Error repellat sed facere dolorem nihil vel. Modi,
             tempora unde nisi dolorem quas consequuntur.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti eum nisi consequatur hic impedit in assumenda distinctio officia nesciunt, cum quam tempore molestiae asperiores, aspernatur facilis earum nihil nulla veritatis?
         </p>
         
     </section>
